# DA-RegisterAllocator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/output/: alloc6_free.txt  alloc6_free2.txt  alloc6_spill.txt  alloc6_split.txt  allocation1.txt  allocation2.txt  allocation3.txt  allocation4.txt  allocation5.txt  allocation6.txt
data/registers/: registers_free.txt  registers_free2.txt  registers_spill1.txt  registers_split1.txt
docs/html/: FreeAllocator_8cpp.html  FreeAllocator_8cpp__incl.map  FreeAllocator_8cpp__incl.md5  FreeAllocator_8cpp_source.html  FreeAllocator_8h.html  FreeAllocator_8h__dep__incl.map  FreeAllocator_8h__dep__incl.md5  FreeAllocator_8h__incl.map  FreeAllocator_8h__incl.md5  FreeAllocator_8h_source.html  Graph_8h.html  Graph_8h__dep__incl.map  Graph_8h__dep__incl.md5  Graph_8h__incl.map  Graph_8h__incl.md5  Graph_8h_source.html  InterferenceGraphBuilder_8cpp.html  InterferenceGraphBuilder_8cpp__incl.map  InterferenceGraphBuilder_8cpp__incl.md5  InterferenceGraphBuilder_8cpp_source.html  InterferenceGraphBuilder_8h.html  InterferenceGraphBuilder_8h__dep__incl.map  InterferenceGraphBuilder_8h__dep__incl.md5  InterferenceGraphBuilder_8h__incl.map  InterferenceGraphBuilder_8h__incl.md5  InterferenceGraphBuilder_8h_source.html  InterferenceGraph_8cpp.html  InterferenceGraph_8cpp__incl.map  InterferenceGraph_8cpp__incl.md5  InterferenceGraph_8cpp_source.html  InterferenceGraph_8h.html  InterferenceGraph_8h__dep__incl.map  InterferenceGraph_8h__dep__incl.md5  InterferenceGraph_8h__incl.map  InterferenceGraph_8h__incl.md5  InterferenceGraph_8h_source.html  LiveRange_8h.html  LiveRange_8h__dep__incl.map  LiveRange_8h__dep__incl.md5  LiveRange_8h__incl.map  (+332 more)
docs/html/search/: all_0.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_8.js  classes_9.js  classes_b.js  files_0.js  files_2.js  files_3.js  files_5.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+17 more)
include/: FreeAlgorithm.h  Graph.h  GraphColoringAlgorithm.h  InterferenceGraphBuilder.h  LiveRange.h  Menu.h  OutputWriter.h  Parser.h  RegisterAllocator.h  SpillingAlgorithm.h  SplittingAlgorithm.h  Web.h  WebBuilder.h
src/: FreeAlgorithm.cpp  Graph.cpp  GraphColoringAlgorithm.cpp  InterferenceGraphBuilder.cpp  LiveRange.cpp  Menu.cpp  OutputWriter.cpp  Parser.cpp  RegisterAllocator.cpp  SpillingAlgorithm.cpp  SplittingAlgorithm.cpp  Web.cpp  WebBuilder.cpp  main.cpp
src/allocation/: FreeAllocator.cpp  FreeAllocator.h  RegisterAllocator.cpp  RegisterAllocator.h  SpillAllocator.cpp  SpillAllocator.h  SplitAllocator.cpp  SplitAllocator.h
src/graph/: InterferenceGraph.cpp  InterferenceGraph.h  InterferenceGraphBuilder.cpp  InterferenceGraphBuilder.h  LiveRange.h  Web.h  WebBuilder.cpp  WebBuilder.h
src/parser/: Parser.cpp  Parser.h
src/utils/: OutputWriter.cpp  OutputWriter.h
tests/: TestAllocation.cpp  TestFree.cpp  TestInterference.cpp  TestSpillSplit.cpp  TestWebBuilder.cpp
